--- a/FiletoStructure/FiletoStructure/MainWindow.xaml
+++ b/FiletoStructure/FiletoStructure/MainWindow.xaml
@@ -5,15 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FiletoStructure"
         mc:Ignorable="d"
-        Title="MainWindow" Height="183.971" Width="318.235">
+        Title="Create Directory Structure" Height="330.371" Width="277.435">
     <Grid>
-        <TextBox x:Name="txtbxDir" HorizontalAlignment="Left" Height="23" Margin="84,24,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Directory" HorizontalAlignment="Left" Margin="21,21,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnDir" Content="Browse" HorizontalAlignment="Left" Margin="209,24,0,0" VerticalAlignment="Top" Width="75" Click="BtnDir_Click"/>
-        <TextBox x:Name="txtbxFile" HorizontalAlignment="Left" Height="23" Margin="84,55,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="File" HorizontalAlignment="Left" Margin="21,52,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnFile" Content="Browse" HorizontalAlignment="Left" Margin="209,55,0,0" VerticalAlignment="Top" Width="75" Click="BtnFile_Click"/>
-        <Button Content="Go" HorizontalAlignment="Left" Margin="111,104,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <TextBox x:Name="txtbxDir" HorizontalAlignment="Left" Height="23" Margin="22,52,0,0" VerticalAlignment="Top" Width="223"/>
+        <Label Content="Top Level Folder Location" HorizontalAlignment="Left" Margin="21,21,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnDir" Content="Browse" HorizontalAlignment="Left" Margin="170,24,0,0" VerticalAlignment="Top" Width="75" Click="BtnDir_Click"/>
+        <TextBox x:Name="txtbxFile" HorizontalAlignment="Left" Height="23" Margin="22,111,0,0" VerticalAlignment="Top" Width="223"/>
+        <Label Content="Select Directory Outline" HorizontalAlignment="Left" Margin="22,80,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnFile" Content="Browse" HorizontalAlignment="Left" Margin="170,83,0,0" VerticalAlignment="Top" Width="75" Click="BtnFile_Click"/>
+        <Button Content="Make Directories" HorizontalAlignment="Left" Margin="22,272,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click"/>
+        <TextBlock x:Name="lblOutlineWarning" HorizontalAlignment="Left" Margin="66,178,0,0" TextWrapping="Wrap" Text="Invalid Characters detected in directory outline." VerticalAlignment="Top" Width="180"/>
+        <Image x:Name="imgOutlineWarning" HorizontalAlignment="Left" Height="32" Margin="23,178,0,0" VerticalAlignment="Top" Width="32" Source="System.Drawing.SystemIcons.Warning."/>
+        <CheckBox x:Name="cbReplace" Content="" HorizontalAlignment="Left" Margin="36,215,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="lblReplace" HorizontalAlignment="Left" Margin="66,214,0,0" TextWrapping="Wrap" Text="Replace invalid characters with underscore" VerticalAlignment="Top"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="170,272,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBlock HorizontalAlignment="Left" Margin="36,251,0,0" TextWrapping="Wrap" Text="Longest new Path is 0 characters long." VerticalAlignment="Top"/>
+        <TextBlock x:Name="lblFolderWarning" HorizontalAlignment="Left" Margin="65,139,0,0" TextWrapping="Wrap" Text="Invalid finlepath entered for the top level folder location" VerticalAlignment="Top" Width="173"/>
+        <Image x:Name="imgFolderWarning" HorizontalAlignment="Left" Height="32" Margin="21,139,0,0" VerticalAlignment="Top" Width="32" Source="System.Drawing.SystemIcons.Warning."/>
 
     </Grid>
 </Window>
